# h2-powerplant

./: .gitignore  Beispielskript.py  README.md  config MASTER FILE.json  download_bdew.py  pyproject.toml
MA_Fallbeispiele/: 01a_Industrieareal_Base.py  01b_Industrieareal_Optimierung.py  02aZ_Begrenzung_Peaks_7er.py  02a_Begrenzung_Peaks.py  02b_Deaktivierung_Netzentgelte.py  02c_Manuell_5ct_Steuern.py  03C_Verify_Optimum.py  03_A_EUREF_Duesseldorf.py  03_B_EUREF_Duesseldorf_Optimierung.py  05_Technische_Machbarkeit.py  06_schaetzung-netzentgelte-und-stromnev.py  07_Test_FC.py  Annahmen und Quellen EUREF.txt  commonFunctions.py
MA_Fallbeispiele/04_Sensitivitaetsanalysen/: 04A_Netzentgelte_vs_Referenzfaelle.py  04B_Sensitivity_Aufschlaege.py  04C_H2_Preis_und_Verdichter.py  04D_Sensitivity_Wirkungsgrade_und_Komponenten.py  04E_Strompreise_Sensitivity.py  04F_Variation_Kostenparameter_CAPEX.py  04G_FCEV_Bedarf.py  04H_Sensitivity_nur_Wirkungsgrade_NEU.py  04_X_Analyse_H2_Zukauf_nach_Strompreis_Kauf.py
MA_Fallbeispiele/Common_Data/: ev_equiv_dummy_time_series.csv  fcev_dummy_time_series.csv
MA_Fallbeispiele/Fallstudie Exemplarisches Industrieareal/: config_microgrid.json
gui/: neue-dash-gui.py
h2pp/: generators.py  helperFunctions.py  oemof_visio_energy_system_graph.py  optimizer.py  simulation.py  strompreise.py  tco.py  technische_machbarkeit.py
validierungs_skripte/: berliner_wetter_df.pkl  brennstoffzelle.py  experimentieren_mit_strompreisaverage.py  experimentieren_mit_wetteraverage.py  fuellstand_tank_max_tiefe_ermitteln.py  pvgis_test.py  verdichter.py
(+18 files in other folders)
